--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 				<div id="sidebar">
 					<ul>
 						<li>
-							<h2>超小型&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-                                                             <b><font face="Arial" color="#000000" size="2">體重4公斤以下</font></b></h2>
+							<h2>常見家犬&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                                                             <b><font face="Arial" color="#000000" size="2">常見家犬</font></b></h2>
                                                         <ul>
 								<li><a href="giwawa.html">吉娃娃</a></li>
 								<li><a href="ucosia.html">約克夏</a></li>
