--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="header">
 			<div id="logo">
                                
-				<h1>Dog Kingdom</h1>
+				<h1>狗科全書</h1>
                                 <p><strong>Welcome </strong></p>
                                 
 			</div>
