--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>狗科全書</title>
+
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
@@ -13,7 +13,7 @@
 	<div id="menu-wrapper">
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="index.html">首頁</a></li>
+				<li class="current_page_item"><a href="index.html">狗科全書</a></li>
 				
 			</ul>
 		</div>
