--- a/00001.html
+++ b/00001.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Dog Kingdom/吉娃娃</title>
+<title>狗科全書/吉娃娃</title>
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
@@ -21,16 +21,7 @@
 	</div>
 
 <div id="wrapper">
-	<div id="header-wrapper">
-		<div id="header">
-			<div id="logo">
-                               
-				<h1>吉娃娃</h1>
-                                <p><strong>Welcome </strong></p>
-                                
-			</div>
-		</div>
-	</div>
+
 	<!-- end #header -->
 	<div id="page">
 		<div id="page-bgtop">
