--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="menu-wrapper">
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="index.html">狗科全書</a></li>
+				<li class="current_page_item"><a href="index.html">犬隻百科</a></li>
 				
 			</ul>
 		</div>
