--- a/00001.html
+++ b/00001.html
@@ -46,7 +46,9 @@
 							<br><br><br>
                                                         <p><CENTER><font face="Arial" color="#000000" size="6">飼養注意事項</font></CENTER></p> 
                                                         <p><CENTER><font face="微軟正黑體" color="#000000" size="3">
-                                                                   體質易發胖，需控制體重<br>生性怕冷，到了冬天要做好保暖準備<br>容易前肢骨折、後膝十字韌帶斷裂<br>下顎齒骨脆弱，要多留意牙齒保健</font></CENTER></p>
+                                                                   敏捷的犬種，活動量的需求也不小，因此最好能每天都有室外的活動時間讓牠奔跑玩耍。<br以乾布或梳子來保養柴犬的皮膚<br>幼柴犬的牙齒保健
+
+柴犬在四個月大起，乳牙開始換成永久齒，若發現乳牙在動搖時，就應儘早將之拔除</font></CENTER></p>
                                                         <br><br><br>
                                                         <p><center><img src="images/giwawa2.jpg" width="250" height="200" alt="" />&nbsp;
                                                            <img src="images/giwawa.jpg" width="250" height="200" alt="" />&nbsp;
