--- a/00001.html
+++ b/00001.html
@@ -38,7 +38,7 @@
                                                         <p><CENTER><font face="Arial" color="#000000" size="6">性格</font></CENTER></p> 
                                                         <p><CENTER><font face="微軟正黑體" color="#000000" size="3">柴犬性情溫順，忠實，有服從性、忍耐性，樸實而雅致，靈巧機敏，英勇大膽，親切而富有感情，這些特點共同產生一種高貴且自然美麗的性格。具有獨立的天性，對陌生人有所保留，但對於得到它的尊重的人則顯得忠誠而摯愛。有時會攻擊其他狗。
 
-原文網址：https://kknews.cc/pet/pxrx5o2.html</font></CENTER></p>
+</font></CENTER></p>
 							<br><br><br>
                                                         <p><CENTER><font face="Arial" color="#000000" size="6">歷史</font></CENTER></p> 
                                                         <p><CENTER><font face="微軟正黑體" color="#000000" size="3">柴犬最早是被培育作為狩獵鳥類、昆蟲、兔子等小型動物的獵犬。即使有著試圖保存犬種的努力，但柴犬在第二次世界大戰期間因食物短缺和戰後犬瘟熱爆發而近乎絕種。後繼的柴犬都是由倖存下來的三種犬種培育而成，三種犬種分別為長野縣的信州柴犬、岐阜縣的美濃柴犬，以及鳥取縣和島根縣的山陰柴犬。信州柴犬的特徵包括扎實的裏層犬毛以及密集的外層犬毛，體型屬小型，其顏色為赤色。美濃柴犬則有著厚實、豎起的耳朵。其尾巴為鐮刀型，與現代柴犬的卷尾不同。山陰柴犬的體型較現代柴犬大，並大多為全身黑色，與現代黑色柴犬仍然有部分白色和褐色毛髮的特徵不同。
