--- a/00001.html
+++ b/00001.html
@@ -46,9 +46,7 @@
 							<br><br><br>
                                                         <p><CENTER><font face="Arial" color="#000000" size="6">飼養注意事項</font></CENTER></p> 
                                                         <p><CENTER><font face="微軟正黑體" color="#000000" size="3">
-                                                                   敏捷的犬種，活動量的需求也不小，因此最好能每天都有室外的活動時間讓牠奔跑玩耍。<br>以乾布或梳子來保養柴犬的皮膚。<br>幼柴犬的牙齒保健
-
-，柴犬在四個月大起，乳牙開始換成永久齒，若發現乳牙在動搖時，就應儘早將之拔除<>。</font></CENTER></p>
+                                                         平時用乾布或梳子來保養柴犬的皮膚<br>敏捷的犬種，活動量的需求也不小，因此最好能每天都有室外的活動時間讓牠奔跑玩耍。<br>幼柴犬的牙齒保健，柴犬在四個月大起，乳牙開始換成永久齒，若發現乳牙在動搖時，就應儘早將之拔除。</font></CENTER></p>
                                                         <br><br><br>
                                                       
                                                         </center></p>
