--- a/00002.html
+++ b/00002.html
@@ -61,16 +61,16 @@
 							<h2>常見家犬&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
                                                              <b><font face="Arial" color="#000000" size="2"></font></b></h2>
                                                         <ul>
-								<li><a href="00001.html">柴犬</a></li>
-								<li><a href="00002.html">哈士奇</a></li>
-								<li><a href="00003.html">米克斯</a></li>
-								<li><a href="00004.html">黃金獵犬</a></li>
-                                                                <li><a href="00005.html">馬爾濟斯</a></li>
-								<li><a href="00006.html">臘腸狗</a></li>
-								<li><a href="00007.html">米格魯</a></li>
-								<li><a href="00008.html">吉娃娃</a></li>
-								<li><a href="00009.html">法國貴賓犬</a></li>
-								<li><a href="00010.html">薩摩耶犬</a></li>
+								<li><a href="00001.html">柴犬(Shiba Inu)</a></li>
+								<li><a href="00002.html">哈士奇(Husky)</a></li>
+								<li><a href="00003.html">柯基(Corgi)</a></li>
+								<li><a href="00004.html">黃金獵犬(Golden retriever)</a></li>
+                                                                <li><a href="00005.html">馬爾濟斯(Malzis)</a></li>
+								<li><a href="00006.html">臘腸狗(Dachshund)</a></li>
+								<li><a href="00007.html">米格魯(Beagle)</a></li>
+								<li><a href="00008.html">吉娃娃(Chihuahua)</a></li>
+								<li><a href="00009.html">法國貴賓犬(Poodle)</a></li>
+								<li><a href="00010.html">薩摩耶犬(Samoyed)</a></li>
 
 							</ul>
 							
